--- a/scala_server/pom.xml
+++ b/scala_server/pom.xml
@@ -58,7 +58,13 @@
           <artifactId>dropwizard-scala_2.9.1</artifactId>
            <version>0.6.1</version>
     </dependency>
-    <!--Redis-->
+    <dependency>
+          <groupId>com.yammer.dropwizard</groupId>
+          <artifactId>dropwizard-testing</artifactId>
+          <version>0.6.1</version>
+    </dependency>
+
+      <!--Redis-->
     <dependency>
           <groupId>redis.clients</groupId>
           <artifactId>jedis</artifactId>
